--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-handlebars": "^7.0.7",
     "mysql2": "^3.3.5",
     "nodemon": "^2.0.22",
+    "process": "^0.11.10",
     "sequelize": "^6.32.0"
   }
 }
