--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "vue-build": "browserify -g envify -t vueify -e import-js/main.js -o public/js/build.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,48 @@
     "mysql2": "^3.3.5",
     "nodemon": "^2.0.22",
     "process": "^0.11.10",
-    "sequelize": "^6.32.0"
+    "sequelize": "^6.32.0",
+    "envify": "^4.1.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-runtime": "^6.23.0",
+    "babelify": "^8.0.0",
+    "browser-sync": "^2.27.11",
+    "browserify": "*",
+    "moment-timezone": "^0.5.40",
+    "vue": "~2.5.16",
+    "vueify": "8.x"
+  },
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015",
+            "env",
+            "stage-2"
+          ]
+        }
+      ],
+      [
+        "envify",
+        {
+          "NODE_ENV": "production"
+        }
+      ]
+    ]
+  },
+  "browser": {
+    "vue": "vue/dist/vue.min.js"
+  },
+  "alias": {
+    "vue": "./node_modules/vue/dist/vue.min.js"
   }
 }
