--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "envify": "^4.1.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.3.5",
     "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-jwt-cookiecombo": "^1.0.5",
+    "passport-local": "^1.0.0",
     "process": "^0.11.10",
-    "sequelize": "^6.32.0",
-    "envify": "^4.1.0"
+    "sequelize": "^6.32.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
